@@ -1,22 +1,21 @@
 package com.cumulocity.agent.packaging;
 
-import static com.google.common.collect.FluentIterable.from;
-import static com.google.common.collect.ImmutableList.copyOf;
+import static com.google.common.base.Objects.firstNonNull;
+import static com.google.common.base.Throwables.propagate;
 import static com.google.common.io.Files.asByteSink;
 import static com.google.common.io.Resources.asByteSource;
 import static java.nio.file.Files.createDirectories;
-import static java.nio.file.Files.walkFileTree;
+import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
+import static java.util.Calendar.YEAR;
+import static org.apache.maven.shared.utils.io.FileUtils.cleanDirectory;
 import static org.twdata.maven.mojoexecutor.MojoExecutor.*;
 
 import java.io.File;
-import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.net.URL;
-import java.nio.file.FileVisitResult;
-import java.nio.file.Path;
-import java.nio.file.SimpleFileVisitor;
-import java.nio.file.attribute.BasicFileAttributes;
+import java.util.Calendar;
 import java.util.List;
+import java.util.Properties;
 
 import org.apache.maven.execution.MavenSession;
 import org.apache.maven.model.Plugin;
@@ -27,14 +26,12 @@ import org.apache.maven.plugin.MojoExecutionException;
 import org.apache.maven.plugin.MojoFailureException;
 import org.apache.maven.plugins.annotations.*;
 import org.apache.maven.project.MavenProject;
-import org.apache.maven.shared.filtering.MavenFilteringException;
 import org.apache.maven.shared.filtering.MavenResourcesExecution;
 import org.apache.maven.shared.filtering.MavenResourcesFiltering;
-import org.twdata.maven.mojoexecutor.MojoExecutor.Element;
+import org.twdata.maven.mojoexecutor.MojoExecutor.*;
 
-import com.google.common.base.Function;
+import com.google.common.base.Joiner;
 import com.google.common.base.Predicate;
-import com.google.common.base.Throwables;
 import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ObjectArrays;
@@ -43,14 +40,30 @@ import com.google.common.io.Files;
 import com.google.common.reflect.ClassPath;
 import com.google.common.reflect.ClassPath.ResourceInfo;
 
-@Mojo(name = "agent-package", defaultPhase = LifecyclePhase.PACKAGE, requiresDependencyResolution = ResolutionScope.RUNTIME, threadSafe = true)
+@Mojo(name = "agent-package", defaultPhase = LifecyclePhase.PACKAGE, requiresDependencyResolution = ResolutionScope.RUNTIME,
+      threadSafe = true)
 public class PackageMojo extends AbstractMojo {
 
+    @Component
+    private BuildPluginManager pluginManager;
+
+    @Component
+    private MavenResourcesFiltering mavenResourcesFiltering;
+
     @Parameter(property = "package.name", defaultValue = "${project.artifactId}")
-    private String packageName;
+    private String name;
 
     @Parameter(property = "package.directory", defaultValue = "${project.artifactId}")
-    private String directoryName;
+    private String directory;
+
+    @Parameter(property = "package.description", defaultValue = "${project.description}")
+    private String description;
+
+    @Parameter(property = "agent-package.jvmArgs")
+    private List<String> jvmArgs;
+
+    @Parameter(property = "agent-package.arguments")
+    private List<String> arguments;
 
     @Parameter(property = "project.build.sourceEncoding", defaultValue = "utf8")
     private String encoding;
@@ -61,11 +74,14 @@ public class PackageMojo extends AbstractMojo {
     @Parameter(defaultValue = "${session}", readonly = true)
     private MavenSession mavenSession;
 
-    @Component
-    private BuildPluginManager pluginManager;
+    @Parameter(defaultValue = "${project.build.directory}")
+    private File build;
 
     @Parameter(defaultValue = "${project.build.directory}/rpm-tmp")
     private File rpmTemporaryDirectory;
+
+    @Parameter(defaultValue = "${project.build.directory}/docker-work")
+    private File dockerWorkarea;
 
     @Parameter(defaultValue = "${project.build.directory}/rpm-base-build")
     private File workarea;
@@ -73,130 +89,192 @@ public class PackageMojo extends AbstractMojo {
     @Parameter(defaultValue = "${basedir}/src/main/configuration")
     private File configurationDirectory;
 
+    @Parameter(defaultValue = "${basedir}/src/main/docker")
+    private File dockerDirectory;
+
     @Parameter(defaultValue = "false", property = "skip.agent.package")
     private boolean skip;
 
-    @Component
-    private MavenResourcesFiltering mavenResourcesFiltering;
+    @Parameter(defaultValue = "false", property = "skip.agent.package.rpm")
+    private boolean rpmSkip;
+
+    @Parameter(defaultValue = "true", property = "skip.agent.package.container")
+    private boolean containerSkip;
+
+    @Parameter(defaultValue = "${maven.compiler.target}")
+    private String javaRuntime;
+
+    @Parameter(property = "agent-package.heap")
+    private Memory heap;
+
+    @Parameter(property = "agent-package.perm")
+    private Memory perm;
 
     @Override
     public void execute() throws MojoExecutionException, MojoFailureException {
         if (skip) {
-            getLog().info("skiping agent packaging");
+            getLog().info("skipping agent packaging");
             return;
         }
-        generateResources();
-        attachRpm();
-    }
-
-    private void generateResources() {
-        try {
-            copyBaseArtifact();
-            initializeTemplates();
-            evaluateTemplates();
-        } catch (IOException e) {
-            Throwables.propagate(e);
-        } catch (MavenFilteringException e) {
-            Throwables.propagate(e);
+        if (!rpmSkip) {
+            getLog().info("rpm package " + project.getArtifactId());
+            rpmPackage();
+        }
+        if (!containerSkip) {
+            getLog().info("docker container " + project.getArtifactId());
+            dockerContainer();
         }
     }
 
-    private void attachRpm() throws MojoExecutionException {
-        Plugin rpmPlugin = plugin(groupId("org.codehaus.mojo"), artifactId("rpm-maven-plugin"), version("2.1.1"));
+    private void dockerContainer() throws MojoExecutionException {
+        try {
+            copyArtifact(new File(dockerWorkarea, "resources"));
+            final File tmp = new File(build, "tmp");
+            initializeTemplates(fromDirectory("docker"), tmp);
+            filterResources(resource(tmp.getAbsolutePath()), dockerWorkarea);
+            cleanDirectory(tmp);
+            filterResources(resource(configurationDirectory.getAbsolutePath()), new File(dockerWorkarea, "etc"));
+            filterResources(resource(dockerDirectory.getAbsolutePath()), dockerWorkarea);
+        } catch (Exception e) {
+            throw propagate(e);
+        }
+        Plugin plugin = plugin(groupId("com.spotify"), artifactId("docker-maven-plugin"), version("0.4.13"));
 
+        //@formatter:off
         executeMojo(
-                rpmPlugin,
-                goal("attached-rpm"),
-                configuration(
-                        element(name("name"), packageName),
-                        element(name("group"), "C8Y/Agent"),
-                        element(name("distribution"), "Cumulocity 2014"),
-                        element(name("packager"), "Cumulocity"),
-                        element(name("requires"), element(name("require"), "java > 1.7")),
-                        element(name("repackJars"), String.valueOf(false)),
-                        mappings(
-                                mapping(directory("/usr/lib/${package.directory}"),
-                                        sources(source(location(new File(workarea, "bin").getAbsolutePath())))),
-                                mapping(directory("/usr/lib/systemd/system"),
-                                        directoryIncluded(false),
-                                        isConfiguration(true),
-                                        sources(source(location(new File(workarea, "systemd").getAbsolutePath()),
-                                                includes(include(String.format("%s.service", packageName)))))),
-                                mapping(directory("/etc/init.d"),
-                                        directoryIncluded(false),
-                                        isConfiguration(true),
-                                        sources(source(location(new File(workarea, "init.d").getAbsolutePath()),
-                                                includes(include(packageName))))),
-                                mapping(directory("/etc/${package.directory}"), directoryIncluded(false), isConfiguration(true),
-                                        sources(source(location(new File(workarea, "etc").getAbsolutePath())))))
-
-                ), executionEnvironment(this.project, this.mavenSession, this.pluginManager));
+            plugin,
+            goal("build"),
+            configuration(
+                element(name("imageName"), name),
+                element("imageTags",
+                    element("imageTag",project.getVersion()),
+                    element("imageTag","latest")
+                ),
+                element("dockerDirectory", dockerWorkarea.getAbsolutePath())
+            ),
+            executionEnvironment(this.project, this.mavenSession, this.pluginManager));
+        //@formatter:on
     }
 
-    public void evaluateTemplates() throws MavenFilteringException, IOException {
-        Files.createParentDirs(workarea);
-        final MavenResourcesExecution execution = new MavenResourcesExecution(ImmutableList.of(resource(rpmTemporaryDirectory
-                .getAbsolutePath())), workarea, project, encoding, ImmutableList.<String> of(), ImmutableList.<String> of(), mavenSession);
+    private void rpmPackage() throws MojoExecutionException {
+        try {
+            copyArtifact(new File(workarea, "bin"));
+            initializeTemplates(fromDirectory("rpm"), rpmTemporaryDirectory);
+            filterResources(resource(rpmTemporaryDirectory.getAbsolutePath()), workarea);
+            filterResources(resource(configurationDirectory.getAbsolutePath()), new File(workarea, "etc"));
+        } catch (Exception e) {
+            throw propagate(e);
+        }
+        Plugin rpmPlugin = plugin(groupId("org.codehaus.mojo"), artifactId("rpm-maven-plugin"), version("2.1.5"));
+        //@formatter:off
+        executeMojo(
+            rpmPlugin,
+            goal("attached-rpm"),
+            configuration(
+                element(name("name"), name),
+                element(name("group"), "C8Y/Agent"),
+                element(name("distribution"), "Cumulocity GmbH " + currentYear()),
+                element(name("packager"), "Cumulocity GmbH"),
+                element(name("requires"), element(name("require"), "java >= " + javaRuntime)),
+                element(name("repackJars"), String.valueOf(false)),
+                mappings(
+                    mapping(directory("/usr/lib/" + directory),
+                        sources(source(location(new File(workarea, "bin").getAbsolutePath())))),
+                    mapping(directory("/usr/lib/systemd/system"),
+                        directoryIncluded(false),
+                        isConfiguration(true),
+                        sources(source(location(new File(workarea, "systemd").getAbsolutePath()),
+                            includes(include(String.format("%s.service", name)))))),
+                    mapping(directory("/etc/init.d"),
+                        directoryIncluded(false),
+                        isConfiguration(true),
+                        sources(source(location(new File(workarea, "init.d").getAbsolutePath()),
+                            includes(include(name))))),
+                    mapping(directory("/etc/" + directory), directoryIncluded(false), isConfiguration(true),
+                        sources(source(location(new File(workarea, "etc").getAbsolutePath())))))
+
+            ), executionEnvironment(this.project, this.mavenSession, this.pluginManager));
+        //@formatter:on
+    }
+
+    private String currentYear() {
+        return String.valueOf(Calendar.getInstance().get(YEAR));
+    }
+
+    private void filterResources(Resource resource, File destination) throws Exception {
+        final MavenResourcesExecution execution = new MavenResourcesExecution(ImmutableList.of(resource), destination, project, encoding,
+                                                                                 ImmutableList.<String>of(), ImmutableList.<String>of(),
+                                                                                 mavenSession);
+        getLog().info("copy resources from " + resource + " to" + destination);
+        createDirectories(destination.toPath());
         execution.setOverwrite(true);
         execution.setFilterFilenames(true);
         execution.setDelimiters(Sets.newLinkedHashSet(ImmutableList.of("@*@")));
         execution.setSupportMultiLineFiltering(true);
+        final Properties props = new Properties();
+        props.put("package.name", name);
+        props.put("package.directory", directory);
+        props.put("package.description", firstNonNull(description, name + " Service"));
+        props.put("package.jvm-mem", Joiner.on(' ').join(getJvmMem()));
+        props.put("package.jvm-gc", Joiner.on(' ').join(getJvmGc()));
+        props.put("package.arguments", Joiner.on(' ').join(arguments));
+        props.put("package.required-java", javaRuntime);
+        props.put("package.java-version", getJavaVersion());
+        execution.setAdditionalProperties(props);
         mavenResourcesFiltering.filterResources(execution);
     }
 
-    public void initializeTemplates() throws IOException, FileNotFoundException {
-        boolean customLoggingConfigExists = customLoggingConfigExists();
+    private List<String> getJvmMem() {
+        Memory heap = this.heap.or(new Memory("128m", "384m"));
+        Memory perm = this.perm.or(new Memory("64m", "128m"));
+
+        return ImmutableList.of("-Xms" + heap.getMin(), "-Xmx" + heap.getMax(), "-XX:PermSize=" + perm.getMin(),
+            "-XX:MaxPermSize=" + perm.getMax());
+    }
+
+    private List<String> getJvmGc() {
+        if (jvmArgs == null || jvmArgs.isEmpty()) {
+            return ImmutableList.<String>builder().add("-XX:+UseConcMarkSweepGC", "-XX:+CMSParallelRemarkEnabled",
+                "-XX:+ScavengeBeforeFullGC", "-XX:+CMSScavengeBeforeRemark").build();
+        } else
+            return jvmArgs;
+    }
+
+    public void initializeTemplates(Predicate<? super ResourceInfo> filter, File dest) throws IOException {
         getLog().debug("initialize templates");
-        for (ResourceInfo resource : loadTemplates()) {
-            //ugly workaround to not overwrite custom logging configuration
-            if (resource.getResourceName().endsWith("logging.xml") && customLoggingConfigExists) {
-                continue;
-            }
+        for (ResourceInfo resource : loadTemplates(filter)) {
             final URL url = resource.url();
             getLog().debug("template found " + resource.getResourceName());
-            final File destination = new File(rpmTemporaryDirectory, new File(resource.getResourceName()).getPath().substring(4));
+            final String path = new File(resource.getResourceName()).getPath();
+            final File destination = new File(dest, path.substring(path.indexOf('/')));
             Files.createParentDirs(destination);
             asByteSource(url).copyTo(asByteSink(destination));
         }
 
-        final File etc = new File(workarea, "etc");
-        createDirectories(etc.toPath());
-        walkFileTree(configurationDirectory.toPath(), new CopyFileVisitor(etc.toPath()));
-
     }
 
-    private boolean customLoggingConfigExists() {
-        for (File file : configurationDirectory.listFiles()) {
-            if (file.getName().endsWith("logging.xml")) {
-                return true;
-            }
-        }
-        return false;
-    }
-
-    public void copyBaseArtifact() throws IOException {
+    private void copyArtifact(File destination) throws IOException {
         getLog().debug(project.getArtifact().getFile().toString());
-        final File destination = new File(workarea, "bin");
-        final File to = new File(destination, String.format("%s.jar", packageName));
+        final File to = new File(destination, String.format("%s.jar", name));
         Files.createParentDirs(to);
         getLog().debug(String.format("copy artifact %s to %s ", project.getArtifact().getFile().getAbsolutePath(), to.getAbsolutePath()));
-        Files.copy(project.getArtifact().getFile(), to);
+        java.nio.file.Files.copy(project.getArtifact().getFile().toPath(), to.toPath(), REPLACE_EXISTING);
     }
 
-    public ImmutableList<ResourceInfo> loadTemplates() throws IOException {
-        return from(ClassPath.from(getClass().getClassLoader()).getResources()).filter(rpmResource()).toList();
+    private ImmutableList<ResourceInfo> loadTemplates(Predicate<? super ResourceInfo> filter) throws IOException {
+        return FluentIterable.from(ClassPath.from(getClass().getClassLoader()).getResources()).filter(filter).toList();
     }
 
-    public Predicate<ResourceInfo> rpmResource() {
+    private Predicate<ResourceInfo> fromDirectory(final String directory) {
         return new Predicate<ResourceInfo>() {
             public boolean apply(ResourceInfo input) {
-                return input.getResourceName().startsWith("rpm");
+                return input.getResourceName().startsWith(directory);
             }
         };
     }
 
     public Resource resource(String resourceDirectory) {
-        return resource(resourceDirectory, ImmutableList.<String> of(), ImmutableList.<String> of());
+        return resource(resourceDirectory, ImmutableList.<String>of(), ImmutableList.<String>of());
     }
 
     public Resource resource(String resourceDirectory, List<String> includes, List<String> excludes) {
@@ -206,17 +284,6 @@ public class PackageMojo extends AbstractMojo {
         resource.setIncludes(includes);
         resource.setExcludes(excludes);
         return resource;
-    }
-
-    private Element[] includeFiles(File configurationDirectory) {
-        final File[] files = configurationDirectory.listFiles();
-
-        return FluentIterable.from(copyOf(files)).transform(new Function<File, Element>() {
-            public Element apply(File input) {
-                return include(input.getName());
-            }
-
-        }).toArray(Element.class);
     }
 
     private Element sources(Element... elements) {
@@ -243,47 +310,28 @@ public class PackageMojo extends AbstractMojo {
         return element(name("directory"), directory);
     }
 
-    public static Element directoryIncluded(boolean enabled) {
+    private Element directoryIncluded(boolean enabled) {
         return element(name("directoryIncluded"), String.valueOf(enabled));
     }
 
-    public static Element isConfiguration(boolean enabled) {
+    private Element isConfiguration(boolean enabled) {
         return element(name("configuration"), String.valueOf(enabled));
     }
 
-    public static Element mappings(Element... elements) {
+    private Element mappings(Element... elements) {
         return element(name("mappings"), elements);
     }
 
-    public static Element mapping(Element... elements) {
-        return element(name("mapping"), ObjectArrays.concat(elements,
-                new Element[] { element(name("username"), "root"), element(name("filemode"), "777") }, Element.class));
+    private Element mapping(Element... elements) {
+        return element(name("mapping"),
+            ObjectArrays.concat(elements, new Element[] { element(name("username"), "root"), element(name("filemode"), "777") },
+                Element.class));
     }
 
-    public class CopyFileVisitor extends SimpleFileVisitor<Path> {
-        private final Path targetPath;
-
-        private Path sourcePath = null;
-
-        public CopyFileVisitor(Path targetPath) {
-            this.targetPath = targetPath;
+    private String getJavaVersion() {
+        if (javaRuntime.startsWith("1.")) {
+            return javaRuntime.substring(2);
         }
-
-        @Override
-        public FileVisitResult preVisitDirectory(final Path dir, final BasicFileAttributes attrs) throws IOException {
-            if (sourcePath == null) {
-                sourcePath = dir;
-            } else {
-                java.nio.file.Files.createDirectories(targetPath.resolve(sourcePath.relativize(dir)));
-            }
-            return FileVisitResult.CONTINUE;
-        }
-
-        @Override
-        public FileVisitResult visitFile(final Path file, final BasicFileAttributes attrs) throws IOException {
-            getLog().info("copy " + file + " to " + targetPath.resolve(sourcePath.relativize(file)));
-            java.nio.file.Files.copy(file, targetPath.resolve(sourcePath.relativize(file)));
-            return FileVisitResult.CONTINUE;
-        }
+        return javaRuntime;
     }
 }
